2011-04-26  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/seg2dmat.m: v0.2.1

	- We were removing voxels not connected to other voxels from the
	dictionary and the distance matrix. This creates all sorts of
	problems with other functions, because when they find an isolated
	voxel, they try to index a non-existent entry in dict or the
	distance matrix.

	* Add FiltersToolbox/bwregiongrow.m: v0.1.0

	- BWREGIONGROW  Region grow segmentation of binary image from
	multiple seeds.

2011-04-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.3.3

	- Use new slow mode in graph_nn() to avoid running out of
	memory. Either method is, however, too slow, with a expected 35
	min to partition a 468x159x475 image with only 16510 skeleton
	voxels.

	* PointToolbox/graph_nn.m: v0.2.0

	- Add new input argument FAST, to choose between running it in
	vectorized mode (faster), or using a loop (less memory).

	- Fix bug. Voxels not connected to the skeleton (min distance =
	Inf) were being assigned skeleton index 1. Now they get NaN.

	- Remove predecessors list, we don't need it, and it needs a lot
	of memory.

2011-04-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Delete matlab/test/bent-vessel-2d.mat

	- Not an image, just some vectors and matrices that are difficult
	to use.

	* FiltersToolbox/scinrrd_seg2label_stats.m: v0.2.0

	- Fix bug. Skeleton voxels that are not part of the branch voxels
	need to be added to the branch. This can happen because a labelled
	segmentation voxel can belong only to one object, but a skeleton
	bifurcation voxel can be actually shared by more than one.

	- Big rewrite, tidy up, and remove all the code about
	straightening, that is now under function pts_local_rigid().

	- Remove STRAIGHT input argument, that is now implicit if CC is
	provided.

	* PointsToolbox/pts_local_rigid.m: v0.1.1

	- Fix bug. The rotation and translation was wrong, and it became