@@ -62,7 +62,13 @@ MACRO(ADD_MEX_FILE Target)
     SD_APPEND_TARGET_PROPERTIES(${Target} COMPILE_FLAGS ${MATLAB_FLAGS})
     SET_TARGET_PROPERTIES(${Target} PROPERTIES LINK_FLAGS "/export:mexFunction")
   ELSE(MSVC)
-    SET(MATLAB_FLAGS "-fPIC" "-D_GNU_SOURCE" "-pthread" "-D_FILE_OFFSET_BITS=64" "-DMX_COMPAT_32")
+    IF(CMAKE_SIZEOF_VOID_P MATCHES "4")
+      SET(MATLAB_FLAGS "-fPIC" "-D_GNU_SOURCE" "-pthread"
+	"-D_FILE_OFFSET_BITS=64" "-DMX_COMPAT_32")
+    ELSE(CMAKE_SIZEOF_VOID_P MATCHES "4")
+      SET(MATLAB_FLAGS "-fPIC" "-D_GNU_SOURCE" "-pthread"
+	"-D_FILE_OFFSET_BITS=64")
+    ENDIF(CMAKE_SIZEOF_VOID_P MATCHES "4")
     SD_APPEND_TARGET_PROPERTIES(${Target} COMPILE_FLAGS ${MATLAB_FLAGS})
     
     IF(APPLE)
